--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>simple-clock</title>
+    <title>Your Butler</title>
   </head>
   <body>
     <div class="js-clock">
