--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
-    <div class="js-username"></div>
-    <div class="js-greeting">
-      <h1></h1>
-    </div>
+    <div class="js-greeting"></div>
 
     <script src="./clock.js"></script>
-    <script src="./username.js"></script>
+    <script src="./greeting.js"></script>
   </body>
 </html>
