--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
       <h1>00:00</h1>
     </div>
     <div class="js-greeting"></div>
+    <div class="js-weather"></div>
 
     <script src="./clock.js"></script>
     <script src="./greeting.js"></script>
+    <script src="./weather.js"></script>
   </body>
 </html>
