--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="js-greeting"></div>
     <div class="js-weather"></div>
 
-    <script src="./clock.js"></script>
-    <script src="./greeting.js"></script>
-    <script src="./weather.js"></script>
+    <script src="clock.js"></script>
+    <script src="greeting.js"></script>
+    <script src="weather.js"></script>
   </body>
 </html>
