--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     </div>
     <div class="js-greeting"></div>
     <div class="js-weather"></div>
+    <div class="js-todo">
+      <form>
+        <input type="text" />
+      </form>
+    </div>
 
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="weather.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
