--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Your Butler</title>
+    <meta charset="utf-8" />
   </head>
   <body>
     <div class="js-clock">
@@ -13,6 +14,7 @@
       <form>
         <input type="text" />
       </form>
+      <div class="js-todoList"></div>
     </div>
 
     <script src="clock.js"></script>
