--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Your Butler</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="js-clock">
@@ -17,9 +18,9 @@
       <div class="js-todoList"></div>
     </div>
 
-    <script src="clock.js"></script>
-    <script src="greeting.js"></script>
-    <script src="weather.js"></script>
-    <script src="todo.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/greeting.js"></script>
+    <script src="js/weather.js"></script>
+    <script src="js/todo.js"></script>
   </body>
 </html>
