--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="js-todoList"></div>
     </div>
 
+    <script src="js/bg.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/weather.js"></script>
