--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
   <head>
     <title>Your Butler</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="js-clock">
-      <h1>00:00</h1>
-    </div>
-    <div class="js-greeting"></div>
-    <div class="js-weather"></div>
-    <div class="js-todo">
-      <form>
-        <input type="text" />
-      </form>
-      <div class="js-todoList"></div>
-    </div>
+    <div class="root">
+      <div class="js-clock">
+        <div>00:00</div>
+      </div>
+      <div class="js-greeting"></div>
+      <div class="js-weather"></div>
+      <div class="js-todo">
+        <form>
+          <input type="text" />
+        </form>
+        <div class="js-todoList"></div>
+      </div>
 
-    <script src="js/bg.js"></script>
-    <script src="js/clock.js"></script>
-    <script src="js/greeting.js"></script>
-    <script src="js/weather.js"></script>
-    <script src="js/todo.js"></script>
+      <script src="js/bg.js"></script>
+      <script src="js/clock.js"></script>
+      <script src="js/greeting.js"></script>
+      <script src="js/weather.js"></script>
+      <script src="js/todo.js"></script>
+    </div>
   </body>
 </html>
